@@ -61,6 +61,7 @@
 	<string name="menu_item_prefs">Prefs</string>
 	<string name="menu_item_refresh">Refresh</string>
 	<string name="menu_item_scanner">Scanner</string>
+	<string name="menu_item_view">View</string>
 	
 	<string name="loading_data">Please wait a few moment... Loading data...</string>
 	
